<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_result"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="bangkokguy.development.android.SmsForwarder.ResultActivity"
    tools:showIn="@layout/activity_result">

    <TextView
        android:layout_gravity="start"
        android:text="@string/message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:elevation="2dp">
        <TextView
            android:id="@+id/msgText"
            android:backgroundTint="@color/colorAccent"
            android:backgroundTintMode="multiply"
            android:elevation="2dp"
            android:elegantTextHeight="true"
            android:scrollIndicators="right"
            android:isScrollContainer="true"
            android:layout_gravity="start"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </ScrollView>


    <TextView
        android:text="@string/email_to_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    <ListView
        android:id="@+id/msgSenderEmail"
        android:layout_width="wrap_content"
        android:layout_height="60dp"/>

    <TextView
        android:text="@string/sender_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    <ListView
        android:id="@+id/msgSenderName"
        android:layout_width="wrap_content"
        android:layout_height="60dp" />

    <TextView
        android:text="@string/sender_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    <TextView
        android:text="+36303026242"
        android:id="@+id/msgSenderNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/number_of_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    <TextView
        android:id="@+id/numberOfContactsFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>